salesforce-port/force-app/main/default/objects/Domain_Member__c/Domain_Member__c.object-meta.xml
<CustomObject>
    <label>Domain Member</label>
    <nameField><displayFormat>DM-{000000}</displayFormat><label>Member Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Domain Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>