salesforce-port/force-app/main/default/objects/Domain_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Domain Memberships</relationshipLabel>
    <relationshipName>Domain_Memberships</relationshipName>
</CustomField>